# move_camvideo_on_yandexdisk

./: README.md  loggin_file.json  move_and_update_camvideo_on_yandexdisk.py  pyproject.toml  settings.py  write_cam_video_on_yandex_disk.sh
